--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -1,4 +1,60 @@
-.logo{
- justify-content: left;
+@import url('https://fonts.googleapis.com/css2?family=Titillium+Web:wght@600&display=swap');
+
+.navbar-container {
+
+    width: 100%;
+    height: 5%;
+    display: flex;
+    justify-content: space-between;
+
 }
 
+.navlinks ul {
+    padding-left: 0;
+    vertical-align: middle;
+    width: auto;
+
+}
+
+.navlinks li {
+    right: 0;
+    display: inline-block;
+    vertical-align: middle;
+    font-size: 150%;
+    padding-right: 5rem;
+    font-family: 'Titillium Web', sans-serif;
+    color: green;
+}
+
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+    .navbar-container {
+        visibility: hidden;
+    }
+}
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) {
+    .navbar-container {
+        visibility: hidden;
+    }
+}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) {
+    .navbar-container {
+        visibility: hidden;
+    }
+}
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) {
+    .navbar-container {
+        visibility: visible;
+    }
+}
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (min-width: 1200px) {
+    .navlinks li {}
+}
